Closed
Bug 1639824
Opened 5 years ago
Closed 5 years ago
A lot of "IInputPane2::TryHide is failure" warnings
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla78
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | wontfix |
| firefox78 | --- | fixed |
People
(Reporter: masayuki, Assigned: masayuki)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
When I run WPT for editing API, I see too many warnings of OSKInputPaneManager::DismissOnScreenKeyboard.
| Assignee | ||
Comment 1•5 years ago
|
||
I see a lot of "IInputPane2::TryHide is failure" warnings while WPT for editing
API runs.
According to MSDN, they return true only when the application is foreground and
the input panel hasn't been the requested state yet. Therefore, it should
check whether the foreground window is our process or not, and whether the
input pane state is expected or not before warning.
Updated•5 years ago
|
Attachment #9150706 -
Attachment description: Bug 1639824 - Make `OKInputPaneManager` warn only when `TryShow()` and `TryHide()` fail when we're active r=m_kato! → Bug 1639824 - Make `OKInputPaneManager` warn only when `TryShow()` and `TryHide()` fail, we're active and got unexpected result r=m_kato!
Updated•5 years ago
|
Attachment #9150706 -
Attachment description: Bug 1639824 - Make `OKInputPaneManager` warn only when `TryShow()` and `TryHide()` fail, we're active and got unexpected result r=m_kato! → Bug 1639824 - Make `OKInputPaneManager` warn only when `TryShow()` and `TryHide()` fail, we're active and we get unexpected result r=m_kato!
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/2a7c97cba7b7
Make `OKInputPaneManager` warn only when `TryShow()` and `TryHide()` fail, we're active and we get unexpected result r=m_kato
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Updated•5 years ago
|
Updated•5 years ago
|
Has Regression Range: --- → yes
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•