Bug 1639824 - Make `OKInputPaneManager` warn only when `TryShow()` and `TryHide()` fail, we're active and we get unexpected result r=m_kato

I see a lot of "IInputPane2::TryHide is failure" warnings while WPT for editing
API runs.

According to MSDN, they return true only when the application is foreground and
the input panel hasn't been the requested state yet.  Therefore, it should
check whether the foreground window is our process or not, and whether the
input pane state is expected or not before warning.

* https://docs.microsoft.com/en-us/uwp/api/windows.ui.viewmanagement.inputpane.tryshow?view=winrt-18362
* https://docs.microsoft.com/en-us/uwp/api/windows.ui.viewmanagement.inputpane.tryhide?view=winrt-18362

Differential Revision: https://phabricator.services.mozilla.com/D76295